# http-kit

./: CHANGELOG.md  Cargo.toml  README.md  release-plz.toml
.github/workflows/: ci.yml  publish.yml  rust-clippy.yml  test.yml
examples/: forms.rs
src/: body.rs  endpoint.rs  error.rs  lib.rs  macros.rs  middleware.rs  mime_guess.rs  request.rs  response.rs  sse.rs  utils.rs  ws.rs
src/body/: convert.rs  error_type.rs  mod.rs  utils.rs
tests/: lib_tests.rs
