[package]
name = "http-kit"
version = "0.2.0"
edition = "2021"
rust-version = "1.87"
authors = ["Lexo Liu <me@lexo.cool>"]
license = "MIT"
description = "A flexible and ergonomic HTTP toolkit for Rust with async support, middleware, and zero-copy body handling"
documentation = "https://docs.rs/http-kit"
repository = "https://github.com/lexoooooo/http-kit"
homepage = "https://github.com/lexoooooo/http-kit"
readme = "README.md"
keywords = ["http", "async", "middleware", "body", "streaming"]
categories = ["web-programming", "network-programming", "asynchronous"]

[dependencies]
http = "1.3"
bytes = "1.10"
bytestr = "0.1.0"
anyhow = "1.0"
futures-lite = "2.6"
pin-project-lite = "0.2.16"
http-body-util = "0.1.3"

[dependencies.serde_json]
version = "1.0"
optional = true

[dependencies.serde_urlencoded]
version = "0.7.1"
optional = true

[dependencies.serde]
version = "1.0"
optional = true

[dependencies.http-body]
version = "1.0"

[dependencies.mime]
version = "0.3.17"
optional = true

[dependencies.async-fs]
version = "2.1"
optional = true

[dependencies.cookie]
version = "0.18"
optional = true

[features]
default = ["json", "form", "std", "cookie", "mime"]
std = []
full = ["json", "form", "std", "cookie", "mime", "fs"]
mime = ["dep:mime"]
json = ["dep:serde", "dep:serde_json"]
form = ["dep:serde", "dep:serde_urlencoded"]
fs = ["dep:async-fs"]
cookie = ["dep:cookie"]

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
