[package]
name = "http-kit"
version = "0.4.0"
edition = "2021"
rust-version = "1.87"
authors = ["Lexo Liu <me@lexo.cool>"]
license = "MIT"
description = "A flexible and ergonomic HTTP toolkit for Rust with async support, middleware, and zero-copy body handling"
documentation = "https://docs.rs/http-kit"
repository = "https://github.com/lexoooooo/http-kit"
homepage = "https://github.com/lexoooooo/http-kit"
readme = "README.md"
keywords = ["http", "async", "middleware", "body", "streaming"]
categories = ["web-programming", "network-programming", "asynchronous"]

[dependencies]
http = "1.3"
bytes = "1.10"
mime = "0.3.17"
bytestr = "0.3.1"
futures-lite = "2.6"
pin-project-lite = "0.2.16"
http-body-util = "0.1.3"
mime_guess = { version = "2.0.5", optional = true }
eyre = "0.6.12"

[dependencies.serde_json]
version = "1.0"
optional = true

[dependencies.serde_urlencoded]
version = "0.7.1"
optional = true

[dependencies.serde]
version = "1.0"
optional = true

[dependencies.http-body]
version = "1.0"


[dependencies.async-fs]
version = "2.1"
optional = true

[dependencies.cookie]
version = "0.18"
optional = true

[features]
default = ["json", "form", "std", "cookie", "ws"]
std = []
full = ["json", "form", "std", "cookie", "fs"]
json = ["dep:serde", "dep:serde_json"]
form = ["dep:serde", "dep:serde_urlencoded"]
fs = ["dep:async-fs", "dep:mime_guess"]
ws = []
cookie = ["dep:cookie"]

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0.17"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
